# book-recommendation-system

./: README.md  pyproject.toml
booklib/: run_celery.sh
booklib/booklib/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
booklib/users/: models.py  serializers.py  views.py
booklib/users/migrations/: 0001_initial.py  0002_alter_user_last_name.py  0003_user_uuid_alter_user_created_on_alter_user_id.py
booklib/users/tests/: test_jwt_api.py  test_user_api.py
